docs(docs-examples): fix code switch issue on firefox

--- a/src/docs/components/docs-example/docs-example.css
+++ b/src/docs/components/docs-example/docs-example.css
@@ -89,6 +89,7 @@
   justify-content: space-between;
   align-items: center;
   flex-grow: 1;
+  line-height: 0; /* Firefox fix */
 }
 
 .docs-example__tool-switch {
